--- a/styles.css
+++ b/styles.css
@@ -38,13 +38,36 @@ main{
     display: none;
     z-index: 1;
     position: fixed;
-    width: 50%;
-    height: 30%;
-    left: 0;
     top: 0;
-    background-color: red;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
 }
 
 .modal-content{
-    background-color: blue;
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+.modal-header{
+    text-align: center;
+    vertical-align: center;
+}
+
+table{
+    margin: 20px 0 20px 0;
+}
+
+.table-left{
+    text-align: right;
+    padding-right: 10px;
+}
+
+.table-right{
+    text-align: left;
+    padding-left: 10px;
 }
